--- a/Settings/res/xml/development_prefs.xml
+++ b/Settings/res/xml/development_prefs.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen android:title="@string/development_settings_title"
   xmlns:android="http://schemas.android.com/apk/res/android">
-    <com.android.settings.BugreportPreference android:title="@android:string/global_action_toggle_silent_mode" android:key="bugreport" android:dialogTitle="@android:string/global_action_toggle_silent_mode" />
+    <com.android.settings.BugreportPreference android:title="@android:string/bugreport_title" android:key="bugreport" android:dialogTitle="@android:string/bugreport_title" />
     <PreferenceScreen android:persistent="false" android:title="@string/local_backup_password_title" android:key="local_backup_password" android:summary="@string/local_backup_password_summary_none">
         <intent android:targetPackage="com.android.settings" android:action="android.settings.privacy.SET_FULL_BACKUP_PASSWORD" android:targetClass="com.android.settings.SetFullBackupPassword" />
     </PreferenceScreen>
