--- a/Mms/res/values-ru/arrays.xml
+++ b/Mms/res/values-ru/arrays.xml
@@ -16,4 +16,41 @@
         <item>10 секунд</item>
         <item>Другое</item>
     </string-array>
+    <string-array name="default_smiley_names">
+        <item>Радость</item>
+        <item>Грустный</item>
+        <item>Подмигивает</item>
+        <item>Показывает язык</item>
+        <item>Удивлен</item>
+        <item>Поцелуй</item>
+        <item>Кричит</item>
+        <item>Крутой</item>
+        <item>Не болтай попусту</item>
+        <item>В замешательстве</item>
+        <item>Смущение</item>
+        <item>Ангел</item>
+        <item>Нерешительный</item>
+        <item>Плачет</item>
+        <item>Не скажу</item>
+        <item>Смех</item>
+        <item>Озадаченный</item>
+        <item>Сердце</item>
+        <item>Злой</item>
+        <item>Ухмылка</item>
+        <item>Невозмутимость</item>
+    </string-array>
+    <string-array name="pref_templates_gestures_sensitivity_entries">
+        <item>1 (наименее точно)</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12 (точные жесты)</item>
+    </string-array>
 </resources>
