--- a/Mms/res/values-ru/plurals.xml
+++ b/Mms/res/values-ru/plurals.xml
@@ -20,4 +20,22 @@
     <plurals name="recipient_count">
         <item quantity="other">%1$s чел.</item>
     </plurals>
+    <plurals name="template_confirm_delete_conversation">
+        <item quantity="other">Будет удалено %1$s шаблонов.</item>
+        <item quantity="one">Будет удалён %1$s шаблон.</item>
+        <item quantity="few">Будет удалено %1$s шаблона.</item>
+    </plurals>
+    <plurals name="remaining_delay_time">
+        <item quantity="other">"Отправка через %1$d секунд...
+Нажмите для отмены."</item>
+        <item quantity="one">"Отправка через %1$d секунду...
+Нажмите для отмены."</item>
+        <item quantity="few">"Отправка через %1$d секунды...
+Нажмите для отмены."</item>
+    </plurals>
+    <plurals name="confirm_mark_unread_conversation">
+        <item quantity="other">%1$s цепочек будут помечены как содержащие новые сообщения.</item>
+        <item quantity="one">%1$s цепочка будет помечена как содержащая новые сообщения.</item>
+        <item quantity="few">%1$s цепочки будут помечены как содержащие новые сообщения.</item>
+    </plurals>
 </resources>
