--- a/Settings/res/values-ru/arrays.xml
+++ b/Settings/res/values-ru/arrays.xml
@@ -16,7 +16,6 @@
         <item>2 мин.</item>
         <item>5 мин.</item>
         <item>10 мин.</item>
-        <item>30 мин.</item>
     </string-array>
     <string-array name="dream_timeout_entries">
         <item>Никогда</item>
@@ -37,6 +36,8 @@
         <item>Через 2 мин.</item>
         <item>Через 5 мин.</item>
         <item>Через 10 мин.</item>
+        <item>15 минут</item>
+        <item>20 минут</item>
         <item>Через 30 мин.</item>
     </string-array>
     <string-array name="entries_font_size">
@@ -51,7 +52,7 @@
         <item>Обычная</item>
         <item>Быстрая</item>
         <item>Беглая</item>
-        <item>Достаточно быстрая</item>
+        <item>Очень быстрая</item>
         <item>Быстрая</item>
         <item>Ещё быстрее</item>
         <item>Очень быстрая</item>
@@ -96,6 +97,8 @@
         <item>TLS</item>
         <item>TTLS</item>
         <item>PWD</item>
+        <item>SIM</item>
+        <item>AKA</item>
     </string-array>
     <string-array name="wifi_p2p_wps_setup">
         <item>Push-кнопка</item>
@@ -108,12 +111,13 @@
         <item>Сбой</item>
         <item>Доступно</item>
         <item>Вне диапазона</item>
+        <item>Получение IP-адреса</item>
     </string-array>
     <string-array name="bluetooth_visibility_timeout_entries">
         <item>2 мин.</item>
         <item>5 мин.</item>
         <item>1 ч.</item>
-        <item>Без тайм-аута</item>
+        <item>Не отключать</item>
     </string-array>
     <string-array name="wifi_signal">
         <item>Слабый</item>
@@ -124,7 +128,7 @@
     <string-array name="wifi_sleep_policy_entries">
         <item>Не выключать</item>
         <item>Только при питании от сети</item>
-        <item>Всегда выключать (увеличивает объем моб. трафика)</item>
+        <item>Всегда выключать (моб. трафик больше)</item>
     </string-array>
     <string-array name="wifi_sleep_policy_entries_wifi_only">
         <item>Не выключать</item>
@@ -161,7 +165,8 @@
     </string-array>
     <string-array name="wifi_ip_settings">
         <item>DHCP</item>
-        <item>Пользовательские</item>
+        <item>Статический</item>
+        <item>Авто</item>
     </string-array>
     <string-array name="wifi_proxy_settings">
         <item>Нет</item>
@@ -189,7 +194,7 @@
         <item>Не указано</item>
     </string-array>
     <string-array name="mvno_type_entries">
-        <item>Нет</item>
+        <item>None</item>
         <item>SPN</item>
         <item>IMSI</item>
         <item>GID</item>
@@ -252,9 +257,9 @@
         <item>контролировать использование энергии при определении местоположения</item>
     </string-array>
     <string-array name="app_ops_labels">
-        <item>Местоположение</item>
-        <item>Местоположение</item>
-        <item>Местоположение</item>
+        <item>Определение местоположения</item>
+        <item>Определение местоположения</item>
+        <item>Определение местоположения</item>
         <item>Вибросигнал</item>
         <item>Считывать данные контактов</item>
         <item>Изменение контактов</item>
@@ -262,9 +267,9 @@
         <item>Изменение списка вызовов</item>
         <item>Считывать данные календаря</item>
         <item>Изменение календаря</item>
-        <item>Местоположение</item>
+        <item>Определение местоположения</item>
         <item>Разместить уведомление</item>
-        <item>Местоположение</item>
+        <item>Определение местоположения</item>
         <item>Позвонить</item>
         <item>Чтение SMS/MMS</item>
         <item>Запись SMS/MMS</item>
@@ -293,7 +298,7 @@
         <item>Громкость уведомлений</item>
         <item>Громкость Bluetooth-устройств</item>
         <item>Не отключать</item>
-        <item>Местоположение</item>
+        <item>Определение местоположения</item>
         <item>Определение местоположения</item>
     </string-array>
     <string-array name="long_press_timeout_selector_titles">
@@ -384,11 +389,11 @@
         <item>Нет данных</item>
         <item>720 x 480 пикс. (mdpi)</item>
         <item>720 x 480 (mdpi, безопасный)</item>
-        <item>1280 x 720 (tvdpi)</item>
+        <item>1280 x 720 пикс. (tvdpi)</item>
         <item>1280 x 720 (tvdpi, безопасный)</item>
-        <item>1920 x 1080 (xhdpi)</item>
+        <item>1920 x 1080 пикс. (xhdpi)</item>
         <item>1920 x 1080 (xhdpi, безопасный)</item>
-        <item>1280 x 720 (tvdpi)/1920 x 1080 (xhdpi)</item>
+        <item>1280x720 (tvdpi)/1920x1080 (xhdpi)</item>
     </string-array>
     <string-array name="enable_opengl_traces_entries">
         <item>Нет данных</item>
@@ -448,6 +453,24 @@
         <item>низкий</item>
         <item>очень низкий</item>
     </string-array>
+    <string-array name="double_tap_entries">
+        <item>Chrome</item>
+        <item>Браузер</item>
+        <item>Камера</item>
+        <item>Gmail</item>
+        <item>Карты</item>
+        <item>Контакты</item>
+        <item>Телефон</item>
+        <item>Play Музыка</item>
+        <item>Текстовые сообщения</item>
+        <item>Голосовые команды</item>
+        <item>Голосовой поиск</item>
+        <item>Нет</item>
+    </string-array>
+    <string-array name="wifi_p2p_frequency_band_entries">
+        <item>2.4 ГГц</item>
+        <item>5.0 ГГц</item>
+    </string-array>
     <string-array name="wifi_p2p_device_limit">
         <item>2 устройства</item>
         <item>3 устройства</item>
@@ -460,5 +483,66 @@
         <item>30 минут</item>
         <item>60 минут</item>
         <item>Никогда не отключаться</item>
+    </string-array>
+    <string-array name="wifi_ap_frequency_band_entries">
+        <item>Только 2,4 ГГц</item>
+        <item>Только 5 ГГц</item>
+    </string-array>
+    <string-array name="wifi_sim_slot_entries">
+        <item>SIM 1</item>
+        <item>SIM 2</item>
+    </string-array>
+    <string-array name="available_cryptographic_modes">
+        <item>Разрешить несогласованные алгоритмы</item>
+        <item>Использовать только согласованные алгоритмы FIPS-140–2</item>
+    </string-array>
+    <string-array name="selected_crypto_warning">
+        <item>При переключении в криптографический режим с несогласованными алгоритмами телефон сможет использовать алгоритмы, не соответствующие стандартам шифрования. Для того чтобы изменения вступили в силу, телефон необходимо перезагрузить. Продолжить?</item>
+        <item>При включении режима FIPS-140-2 доступ к некоторым веб-сайтам может быть закрыт в случае, если для них требуется безопасное подключение с использованием несогласованных алгоритмов, а также будут отключены аккаунты электронной почты, основанные на несогласованных алгоритмах. Для того чтобы изменения вступили в силу, телефон необходимо перезагрузить. Продолжить?</item>
+    </string-array>
+    <string-array name="wifi_ap_channel_auto">
+        <item>Авто</item>
+    </string-array>
+    <string-array name="wifi_ap_channel">
+        <item>Канал 1</item>
+        <item>Канал 2</item>
+        <item>Канал 3</item>
+        <item>Канал 4</item>
+        <item>Канал 5</item>
+        <item>Канал 6</item>
+        <item>Канал 7</item>
+        <item>Канал 8</item>
+        <item>Канал 9</item>
+        <item>Канал 10</item>
+        <item>Канал 11</item>
+        <item>Канал 12</item>
+        <item>Канал 13</item>
+        <item>Канал 14</item>
+    </string-array>
+    <string-array name="timer">
+        <item>10 мин</item>
+        <item>15 минут</item>
+        <item>30 минут</item>
+        <item>60 минут</item>
+        <item>Никогда не отключать</item>
+    </string-array>
+    <string-array name="num_devices">
+        <item>2 устройства</item>
+        <item>3 устройства</item>
+        <item>4 устройства</item>
+        <item>5 устройств</item>
+        <item>8 устройств</item>
+    </string-array>
+    <string-array name="postpone_dialog_items_text">
+        <item>1 час</item>
+        <item>2 часа</item>
+        <item>за 4 часа</item>
+        <item>за 8 часов</item>
+        <item>12 часов</item>
+    </string-array>
+    <string-array name="memory_card_modes">
+        <item>Устройство</item>
+        <item>Пароль</item>
+        <item>Устройство и пароль</item>
     </string-array>
 </resources>
