--- a/Settings/res/xml-ru/timezones.xml
+++ b/Settings/res/xml-ru/timezones.xml
@@ -64,6 +64,7 @@
     <timezone id="Asia/Rangoon">Рангун</timezone>
     <timezone id="Asia/Krasnoyarsk">Красноярск</timezone>
     <timezone id="Asia/Bangkok">Бангкок</timezone>
+    <timezone id="Asia/Jakarta">Jakarta</timezone>
     <timezone id="Asia/Shanghai">Пекин</timezone>
     <timezone id="Asia/Hong_Kong">Гонконг</timezone>
     <timezone id="Asia/Irkutsk">Иркутск</timezone>
