--- a/SystemUI/res/layout-sw720dp/status_bar_search_panel.xml
+++ b/SystemUI/res/layout-sw720dp/status_bar_search_panel.xml
@@ -1,6 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.android.systemui.SearchPanelView android:id="@id/search_panel_container" android:layout_width="fill_parent" android:layout_height="fill_parent"
-  xmlns:prvandroid="http://schemas.android.com/apk/prv/res/android"
-  xmlns:android="http://schemas.android.com/apk/res/android">
-    <com.android.internal.widget.multiwaveview.GlowPadView android:gravity="top|right|center" android:layout_gravity="bottom|left|center" android:id="@id/glow_pad_view" android:layout_width="wrap_content" android:layout_height="@dimen/navbar_search_panel_height" android:layout_marginLeft="-150.0dip" prvandroid:innerRadius="@android:dimen/glowpadview_inner_radius" prvandroid:targetDescriptions="@array/navbar_search_target_descriptions" prvandroid:directionDescriptions="@array/navbar_search_direction_descriptions" prvandroid:outerRingDrawable="@drawable/navbar_search_outerring" prvandroid:pointDrawable="@android:drawable/ic_lockscreen_glowdot" prvandroid:glowRadius="@android:dimen/glowpadview_glow_radius" prvandroid:targetDrawables="@array/navbar_search_targets" prvandroid:handleDrawable="@drawable/navbar_search_handle" prvandroid:outerRadius="@dimen/navbar_search_outerring_radius" prvandroid:vibrationDuration="@integer/config_vibration_duration" prvandroid:snapMargin="@dimen/navbar_search_snap_margin" prvandroid:feedbackCount="0" prvandroid:alwaysTrackFinger="true" />
+<com.android.systemui.SearchPanelView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:prvandroid="http://schemas.android.com/apk/prv/res/android"
+    android:id="@id/search_panel_container"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+
+    <com.android.internal.widget.multiwaveview.GlowPadView
+        android:id="@id/glow_pad_view"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/navbar_search_panel_height"
+        android:layout_gravity="bottom|left|center"
+        android:layout_marginLeft="-150.0dip"
+        android:gravity="top|right|center"
+        prvandroid:alwaysTrackFinger="true"
+        prvandroid:directionDescriptions="@array/navbar_search_direction_descriptions"
+        prvandroid:feedbackCount="0"
+        prvandroid:glowRadius="@android:dimen/glowpadview_glow_radius"
+        prvandroid:handleDrawable="@drawable/navbar_search_handle"
+        prvandroid:innerRadius="@android:dimen/glowpadview_inner_radius"
+        prvandroid:outerRadius="@dimen/navbar_search_outerring_radius"
+        prvandroid:outerRingDrawable="@drawable/navbar_search_outerring"
+        prvandroid:pointDrawable="@android:drawable/ic_lockscreen_glowdot"
+        prvandroid:snapMargin="@dimen/navbar_search_snap_margin"
+        prvandroid:targetDescriptions="@array/navbar_search_target_descriptions"
+        prvandroid:targetDrawables="@array/navbar_search_targets"
+        prvandroid:vibrationDuration="@integer/config_vibration_duration" />
 </com.android.systemui.SearchPanelView>
