--- a/SystemUI/res/layout/system_bar_recent_panel_footer.xml
+++ b/SystemUI/res/layout/system_bar_recent_panel_footer.xml
@@ -1,3 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout android:id="@id/listview_footer_padding" android:layout_width="fill_parent" android:layout_height="24.0dip"
-  xmlns:android="http://schemas.android.com/apk/res/android" />
+<FrameLayout
+    android:id="@id/listview_footer_padding"
+    android:layout_width="fill_parent"
+    android:layout_height="24.0dip"
+    xmlns:android="http://schemas.android.com/apk/res/android" />
